The taskbar is not hidden after restore sizemode from minimized fullscreen.
Categories
(Core :: Widget: Win32, defect, P3)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr102 | --- | unaffected |
| firefox108 | --- | wontfix |
| firefox109 | --- | wontfix |
| firefox110 | --- | wontfix |
| firefox111 | --- | verified |
People
(Reporter: alice0775, Assigned: emilio)
References
(Regression)
Details
(Keywords: nightly-community, regression)
Attachments
(1 file)
Steps to reproduce:
-
Turn off 'Automatically hide taskbar' on Windows 10 taskbar settings.
-
Start Nightly110.0a1
-
Press F11 key, so that browser is fullscreen.
-
Move mouse to top-side of screen, so that
Window control buttonsappears. -
Click minimize button, so that browser is minimized.
-
Click Nightly taskbar button to restore browser window.
--- observe the taskbar is still visible --- BUG -
Click Nightly taskbar button instead of the
Window control buttonsto minimize window. -
Click Nightly taskbar button to restore browser window.
--- observe the taskbar will be hidden --- GOOD
Actual results:
The taskbar is not hidden after restore sizemode from minimized fullscreen.
Bug 1806438 did not fix this
Edge works as expected.
Expected results:
The taskbar sould be hidden after restore sizemode from minimized fullscreen.
Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=73c2e39ed3070b7e61f33fca7f7c2376949cfa6c&tochange=7ae4a0fd85bf7576d53c390599238b557fa93c10
Updated•2 years ago
|
| Assignee | ||
Comment 1•2 years ago
|
||
Yeah, bug 1809057 is the actual fix for this in some systems, see commit message there.
| Reporter | ||
Comment 2•2 years ago
|
||
Bug 1809057 did not fix this.
I can still reproduce this issue on Nightly111.0a1 (20230117161302).
| Reporter | ||
Updated•2 years ago
|
| Assignee | ||
Comment 4•2 years ago
|
||
This makes the event order of restoring a minimized, maximized, and
normal window in sync, fixing this bug.
Round N of hopefully-not-infinite of trying to make this code more
sensible.
Updated•2 years ago
|
| Assignee | ||
Updated•2 years ago
|
Comment 6•2 years ago
|
||
| bugherder | ||
Updated•2 years ago
|
Updated•2 years ago
|
Comment 7•2 years ago
|
||
Reproduced the issue with Firefox 110.0a1 (2023-01-11) on Windows 10x64 by following the STR from comment 0. Restoring Firefox from the taskbar after minimizing it while fullscreen will still display the taskbar.
The issue is verified fixed with Firefox 111.0b8 on Windows 10x64. Restoring Firefox from the taskbar will no longer display the taskbar.
Description
•