Bug 1809757 - Consistently fire activation for window restore. r=rkraesig

This makes the event order of restoring a minimized, maximized, and
normal window in sync, fixing this bug.

Round N of hopefully-not-infinite of trying to make this code more
sensible.

Differential Revision: https://phabricator.services.mozilla.com/D168571